tests/invalid/func_arg_type_mismatch/main.py
def add(a: int, b: int) -> int:
    return a + b

x: int = add(1, 2.0)
